--- a/stage2/.env-example
+++ b/stage2/.env-example
@@ -1,4 +1,5 @@
 POSTGRES_URIpostgresql://username:password@localhost:5432/go-server
+TEST_POSTGRES_URIpostgresql://username:password@localhost:5432/go-server
 JWT_SECRETsecret-thirty-2-uwoh8wy04s-string
 ENCRYPT_COOKIE_KEYsecret-thirty-2-uwoh8wy04s-string
 APP_ENVdev
